--- a/Plantilla TFM.tex
+++ b/Plantilla TFM.tex
@@ -275,10 +275,12 @@ Finally, an extensive evaluation is performed on the corpus to determine the per
 
 %Publicaciones derivadas del trabajo realizado.
 
+
 \appendix
 \chapter{Guía de anotación}
-\includepdf[pages={1-7}]{Guia_anotacion.pdf}
 
+\includepdf[pages={1-7}]{Guia_anotacion.pdf}
+\label{appendix:guiaanotacion}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% lISTA DE TAREAS PENDIENTES.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
