--- a/capitulos/ConclusionesYTrabajoFuturo.tex
+++ b/capitulos/ConclusionesYTrabajoFuturo.tex
@@ -8,7 +8,7 @@
 
 \section{Conclusiones}
 \label{sec:Conclu}
-\noindent En este trabajo fin de máster se ha presentado un nuevo sistema que permite detectar el machismo en redes sociales. El sistema realiza un análisis supervisado y emplea distintos atributos unificados para, posteriormente, hacer uso de un algoritmo de aprendizaje de máquina que permite detectar expresiones y actitudes machistas en las redes sociales. Para cada atributo, se aplican diferentes métodos de preprocesado como la normalización de términos mediante un léxico de \textit{slang} o la sustitución de emoticonos. Tras esto, se unifican los distintos tipos de atributos procesados en un conjunto de datos común que será la entrada de la última fase. En esta etapa, se emplean algoritmos de clasificación supervisada con la intención de obtener un modelo predictivo capaz de detectar las señales textuales que expresan lenguaje machista.
+\noindent En este trabajo fin de máster se ha presentado un nuevo sistema que permite detectar el machismo en redes sociales. El sistema realiza un análisis supervisado y emplea distintos atributos unificados para, posteriormente, hacer uso de un algoritmo de aprendizaje máquina que permite detectar expresiones y actitudes machistas en las redes sociales. Para cada atributo, se aplican diferentes métodos de preprocesado como la normalización de términos mediante un léxico de \textit{slang} o la sustitución de emoticonos. Tras esto, se unifican los distintos tipos de atributos procesados en un conjunto de datos común que será la entrada de la última fase. En esta etapa, se emplean algoritmos de clasificación supervisada con la intención de obtener un modelo predictivo capaz de detectar las señales textuales que expresan lenguaje machista.
 
 Se ha presentado MeTwo, un corpus desarrollado en el presente trabajo y que ha sido utilizado para entrenar el sistema de clasificación descrito. El corpus aportado por este trabajo cuenta 3600 mensajes etiquetados por tres anotadores para la tarea de detección del machismo. Hasta la fecha, y en conocimiento del autor de este trabajo, se trata del corpus etiquetado más extenso disponible en castellano para la tarea de detección del machismo.
 
@@ -25,11 +25,11 @@ Otro inconveniente del sistema desarrollado es la excesiva dependencia de la pre
 
 \noindent El proyecto realizado hasta el momento, presentado como trabajo fin de máster, será el punto de partida para la tesis doctoral que se pretende desarrollar en los próximos años. Aunque los resultados obtenidos son prometedores, se han definido posibles mejoras así como líneas de investigación futuras.
 
-En primer lugar, el método propuesto no realiza ninguna diferencia en el tipo de machismo empleado en el texto. Una posible línea de trabajo sería profundizar en los tipos de machismo existentes y realizar una ampliación del etiquetado en el corpus MeTwo. En la guía de anotación (ver Apéndice) se realiza una primera exploración para presentar distintos tipos de machismo, como, por ejemplo, la sexualización, el descrédito o la dominancia.
+En primer lugar, el método propuesto no realiza ninguna diferencia en el tipo de machismo empleado en el texto. Una posible línea de trabajo sería profundizar en los tipos de machismo existentes y realizar una ampliación del etiquetado en el corpus MeTwo. En la guía de anotación (ver Apéndice A) se realiza una primera exploración para presentar distintos tipos de machismo, como, por ejemplo, la sexualización, el descrédito o la dominancia.
 
 Por otra parte, tal y como se ha podido comprobar de un modo experimental, sería interesante la ampliación a distintos fuentes de datos como periódicos, webs u otras redes sociales. En algunos experimentos, como en el apartado 6.4, se ha concluido que la bondad de los resultados podría ser mayor si se dispusiera de una mayor cantidad de información.
 
-Asimismo, sería recomendable profundizar en las técnicas para la clasificación automática, por ejemplo, técnicas basadas en redes neuronales que alcanzan unos resultados prometedores en tareas relacionadas con el procesamiento de texto \cite{Jacob2019}. Este tipo de técnicas, junto con representaciones textuales basadas en \textit{word embedding}, podrían ayudar a paliar algunas de las limitaciones detectadas en el sistema propuesto como, por ejemplo, la consideración del contexto en el que se utilizan los términos machistas.
+Asimismo, sería recomendable profundizar en las técnicas para la clasificación automática, por ejemplo, técnicas basadas en redes neuronales que alcanzan unos resultados prometedores en tareas relacionadas con el procesamiento de texto como BERT \cite{Jacob2019}. Este tipo de técnicas, junto con representaciones textuales basadas en \textit{word embedding}, podrían ayudar a paliar algunas de las limitaciones detectadas en el sistema propuesto como, por ejemplo, la consideración del contexto en el que se utilizan los términos machistas.
 
 Otra línea de trabajo futura podría ser la adaptación del sistema para el idioma inglés. Debido al diseño de este método, se podría adaptar fácilmente para ser capaz de detectar expresiones machistas en otros idiomas.
 
