--- a/capitulos/Corpus.tex
+++ b/capitulos/Corpus.tex
@@ -128,7 +128,7 @@ El término \textbf{``zorra''} se utiliza continuamente en Twitter con actitudes 
 ``\textit{zorra se puede saber pork no me sigues?}''
 
 
-``\textit{Dedicado a las estúpidas feminazis que dicen que a las mujeres hay que creerles todo solo por ser mujeres.SIN PRUEBAS NO HAY DELITO.https://t.co/XNx3fk3m5K}''
+``\textit{No le presten atencion. como yo hago  a cualquier otra zorra}''
 
 Otra expresión que minusvalora a las mujeres considerada es \textbf{``como una mujer''} para comparar una acción que se realiza peor únicamente por ser mujer:
 
@@ -189,8 +189,7 @@ La frase \textbf{``obsesionada con el machismo''} se utiliza para restar importa
 
 Otra expresión que minusvalora las habilidades de la mujer sería \textbf{``para ser mujer''}, pues implícitamente da por hecho que una mujer realiza cierta acción peor que un hombre:
 
-
-``\textit{@damita2808 @berege7 @Mariagtriana Y los ojos? Uff demasiado dureza en la mirada para ser chica...no?}''
+``\textit{Sos un poco masculina como para ser mujer, ¿sabías?}''
 
 ``\textit{Para ser mujer habla bastante decente ...}''
 
@@ -199,7 +198,7 @@ Otra expresión similar a la anterior sería \textbf{``para ser chica''}:
 
 ``\textit{@GreatBlastG5 Mi madre mide bien para ser chica, y mi padre es de estatura media, lo de los yogures te lo decía a ti porque se que me mientes prro}''
 
-``\textit{Sos un poco masculina como para ser chica, ¿sabías?}''
+``\textit{@damita2808 @berege7 @Mariagtriana Y los ojos? Uff demasiado dureza en la mirada para ser chica...no?}''
 
 Otra expresión machista utilizada en Twitter es \textbf{``hombre que te aguante''}:
 
@@ -446,7 +445,7 @@ Teniendo en cuenta el objetivo principal del presente trabajo, se ha propuesto l
 	
 \end{itemize}
 
-El proceso de etiquetado ha sido llevado a cabo por tres anotadores que han analizado los 3600 tweets que conforman el corpus para asignar una de las tres etiquetas propuestas. Para ello, se ha desarrollado una guía de etiquetado en la que se explican las etiquetas, se proponen ejemplos de cada una de ellas y se establecen las normas de entrega (ver apéndice). El etiquetado se llevó a cabo entre los meses de enero y marzo de 2019 mediante la herramienta ``Google Sheets'', un entorno de trabajo colaborativo online que permite la creación de hojas de cálculo.
+El proceso de etiquetado ha sido llevado a cabo por tres anotadores que han analizado los 3600 tweets que conforman el corpus para asignar una de las tres etiquetas propuestas. Para ello, se ha desarrollado una guía de etiquetado en la que se explican las etiquetas, se proponen ejemplos de cada una de ellas y se establecen las normas de entrega (ver apéndice A). El etiquetado se llevó a cabo entre los meses de enero y marzo de 2019 mediante la herramienta ``Google Sheets'', un entorno de trabajo colaborativo online que permite la creación de hojas de cálculo.
 
 Durante el anotado del corpus, cada uno de los tres etiquetadores propone una clase de las tres disponibles para cada tweets. Al término del etiquetado, se decidirá por votación de los tres anotadores la etiqueta final. En caso de desacuerdo total entre los tres, un cuarto etiquetador decidirá la clase final para el tweet.
 
@@ -575,6 +574,8 @@ Tras revisar los criterios de cada uno de los dos etiquetadores se obtuvieron lo
 \end{table}
 
 Por último, se volvió a valorar la métrica kappa al término del etiquetado, alcanzando los resultados de la tabla 4.5. La distribución de etiquetas elegida por cada anotador se observa en la figura 4.7.
+
+Es importante señalar que, al tener tres posibles valores de etiqueta y tres anotadores, se podría dar un desacuerdo total entre los tres etiquetadores. Durante el proceso de etiquetado, se produjo este problema para 20 tweets que fue resuelto por un cuarto etiquetador.
 
 % Please add the following required packages to your document preamble:
 % \usepackage{booktabs}
