Correcciones versión entregada

--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -25,7 +25,7 @@
 }
 
 @InProceedings{Badjatiya2017,
-  author    = {Pinkesh Badjatiya, Shashank Gupta, Manish Gupta, Vasudeva Varma},
+  author    = {Pinkesh Badjatiya and Vasudeva Varma},
   title     = {Deep Learning for Hate Speech Detection in Tweets},
   booktitle = {2017 International World Wide Web Conference Committee (IW3C2)},
   year      = {2017},
@@ -92,7 +92,7 @@
 }
 
 @InProceedings{Fersini2018,
-  author    = {E. Fersini, P. Rosso, and M. Anzovino},
+  author    = {E. Fersini and M. Anzovino},
   title     = {Overview of the Task on Automatic Misogyny Identication at IberEval 2018},
   booktitle = {Proceedings of the Third Workshop on Evaluation of Human Language Technologies for Iberian Languages (IberEval 2018)},
   year      = {2018},
@@ -127,7 +127,7 @@
 }
 
 @InProceedings{Wahyu2018,
-  author    = {Endang Wahyu, Alessandra Cignarella, Valerio Basile and Viviana Patti},
+  author    = {Endang Wahyu and Alessandra Cignarella and Valerio Basile and Viviana Patti},
   title     = {Exploiting Lexical Knowledge for Detecting Misogyny in English and Spanish Tweets},
   booktitle = {IberEval2018},
   year      = {2018},
@@ -155,7 +155,7 @@
 }
 
 @InProceedings{Frenda2018,
-  author    = {Simona Frenda, Bilal Ghanem, and Manuel Montes-y-Gomez},
+  author    = {Simona Frenda and Bilal Ghanem},
   title     = {Exploration of Misogyny in Spanish and English tweets},
   booktitle = {IberEval 2018},
   year      = {2018},
@@ -276,7 +276,7 @@
 }
 
 @InProceedings{Pedregosa2011,
-  author    = {F. Pedregosa, G. Varoquaux, A. Gramfort},
+  author    = {Fabian Pedregosa and Alexandre Gramfort},
   title     = {Scikit-learn: Machine learning in Python},
   booktitle = {JMLR},
   year      = {2011},
@@ -401,8 +401,9 @@
 }
 
 @InProceedings{Mark,
-  author = {Mark Hepple, Neil Ireso},
+  author = {Mark Hepple and Neil Ireso},
   title  = {NLP-enhanced Content Filtering within the POESIA Project},
+  year   = {2004},
 }
 
 @InProceedings{Elizabeth2001,
@@ -412,7 +413,7 @@
 }
 
 @InProceedings{Aurangzeb2010,
-  author = {Aurangzeb Khan, Baharum Baharudin},
+  author = {Aurangzeb Khan and Baharum Baharudin},
   title  = {A Review of Machine Learning Algorithms for Text-Documents Classification},
   year   = {2010},
 }
