--- a/Plantilla TFM.tex
+++ b/Plantilla TFM.tex
@@ -180,8 +180,8 @@ Trabajo Fin de Máster: Desarrollo de un sistema para la detección del machismo e
   Universidad Nacional de Educación a Distancia\\ \vspace{10pt}
   \vspace{2cm}
   Dirigido por \\ \vspace{10pt}
-  \textbf{Dr. Jorge Amando Carrillo de Albornoz} \\ [0.5em]
-  \textbf{Dr. Laura Plaza Morales} \\ [0.5em]
+  \textbf{Jorge Amando Carrillo de Albornoz} \\ [0.5em]
+  \textbf{Laura Plaza Morales} \\ [0.5em]
   Junio 2019\\
 \end{center}
 
@@ -200,7 +200,7 @@ A Aurora y Jhoni, como etiquetadores, muchas gracias por vuestro trabajo e inter
 
 A mis amigos, David, Guille y Juan, por su ánimo y apoyo en todo momento. Pese a los años y, en ocasiones, a la distancia, os tengo muy presentes y agradezco haber encontrado amigos de verdad como vosotros, no cambiéis nunca.
 
-A Aurora, mi novia, por todo lo que ha tenido que aguantar a lo largo de estos años (y lo que nos queda...). Gracias por enseñarme a ser mejor persona, enseñarme a ser más feliz y por tu amor incondicional. Gracias por responder a mis malos días con una sonrisa, con buenas palabras y con tu cariño. Todo lo que hago lo siento como nuestro. Gracias por estar conmigo siempre.
+A Aurora, mi novia, por todo lo que ha tenido que aguantar a lo largo de estos años (y los que nos quedan...). Gracias por enseñarme a ser mejor persona, enseñarme a ser más feliz y por tu amor incondicional. Gracias por responder a mis malos días con una sonrisa, con buenas palabras y con tu cariño. Todo lo que hago lo siento como nuestro. Gracias por estar conmigo siempre.
 
 A Nela y Melissa, por vuestro amor real, no lo sabéis, pero me habéis enseñado mucho. Gracias Nela por ayudarme en todos los exámenes que hicimos juntos.
 
@@ -213,7 +213,7 @@ Siempre suelo dejar lo mejor para el final. A Jhoni, mi hermano, me es imposible
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter*{Resumen}
 \label{sec:Resumen}
-\noindent En el presente trabajo se propone una arquitectura para la detección del machismo en la red de microblogging Twitter. El objetivo es comprender los mecanismos y señales textuales que conllevan actitudes o lenguaje machista en castellano. Para ello, se ha desarrollado un corpus que contiene texto con contenido y expresiones machistas utilizando como fuente de datos la red social Twitter. Para la creación del corpus, se desarrollará una herramienta que recopilará los mensajes creados en Twitter que contengan distintos términos que pueden conllevar comportamientos machistas. Las expresiones o términos que se buscan son aquellas que, de un modo u otro, minusvaloran el papel de las mujeres en nuestra sociedad, incentivan el abuso o acoso hacia las mujeres, o no les permite expresarse libremente. Existen gran cantidad de expresiones y términos que se utilizan a diario de modo, consciente o no, que minimizan el papel de la mujer en la sociedad. Expresiones como ``feminazi'', ``niñata'' o ``a fregar'' han sido utilizadas para recopilar los tweets. Asimismo, utilizando el corpus generado, se desarrolla un sistema de clasificación que permite detectar lenguaje machista de un modo automatizado. Se emplean distintos algoritmos de clasificación y se establecen dos líneas base que sirven como punto de partida para la evaluación del sistema.
+\noindent En el presente trabajo se propone una arquitectura para la detección del machismo en la red de microblogging Twitter. El objetivo es comprender los mecanismos y señales textuales que conllevan actitudes o lenguaje machista en castellano. Para ello, se ha desarrollado un corpus que contiene texto con contenido y expresiones machistas utilizando como fuente de datos la red social Twitter. Para la creación del corpus, se desarrollará una herramienta que recopilará los mensajes creados en Twitter que contengan distintos términos que pueden conllevar comportamientos machistas. Las expresiones o términos que se buscan son aquellas que, de un modo u otro, minusvaloran el papel de las mujeres en nuestra sociedad, incentivan el abuso o acoso hacia las mujeres, o no les permite expresarse libremente. Existe gran cantidad de expresiones y términos que se utilizan a diario de modo, consciente o no, que minimizan el papel de la mujer en la sociedad. Expresiones como ``feminazi'', ``niñata'' o ``a fregar'' han sido utilizadas para recopilar los tweets. Asimismo, utilizando el corpus generado, se desarrolla un sistema de clasificación que permite detectar lenguaje machista de un modo automatizado. Se emplean distintos algoritmos de clasificación y se establecen dos líneas base que sirven como punto de partida para la evaluación del sistema.
 
 Finalmente, se ha realizado una evaluación exhaustiva del sistema de clasificación sobre el corpus creado para determinar su rendimiento. Los resultados obtenidos muestran que el procedimiento empleado es capaz de detectar el machismo en el corpus utilizado con un buen acierto. Sin embargo, se han detectado distintas limitaciones y problemas debido a la aproximación empleada.
 
