--- a/capitulos/Corpus.tex
+++ b/capitulos/Corpus.tex
@@ -19,7 +19,7 @@ Las expresiones o términos que se buscan son aquellas que, de un modo u otro, mi
 
 Existen refranes, dichos populares y tópicos que se utilizan diariamente y que refuerzan la idea de que las mujeres son inferiores al hombre en una tarea determinada. Por ejemplo, las expresiones ``Mujer al volante, peligro constante'' o ``¡Mujer tenía que ser!'' minusvaloran la habilidad de las mujeres para realizar una tarea específica solo por ser mujeres. Otras muchas expresiones machistas se recopilaron en un trabajo realizado en un instituto de Albacete \cite{ElPais}.
 
-Pese a que, como se ha presentado, existen gran cantidad de expresiones que conllevan actitudes machistas, ha sido necesario recoger también ciertos términos más generales que permitan establecer una buena relación entre tweets con contenido machista y aquellos que no presentan este tipo de lenguaje. Esto será muy importante a la hora de entrenar el sistema automático de clasificación. Así, partiendo de los trabajos anteriores, se han seleccionado 29 expresiones que se utilizarán para recopilar tweets como punto de partida para la generación del dataset. La tabla 1 recopila dichos términos. A continuación, se describen las expresiones seleccionadas.
+Pese a que, como se ha presentado, existen gran cantidad de expresiones que conllevan actitudes machistas, ha sido necesario recoger también ciertos términos más generales que permitan establecer una buena relación entre tweets con contenido machista y aquellos que no presentan este tipo de lenguaje. Esto será muy importante a la hora de entrenar el sistema automático de clasificación. Así, partiendo de los trabajos anteriores, se han seleccionado 29 expresiones que se utilizarán para recopilar tweets como punto de partida para la generación del dataset. La tabla 4.1 recopila todos los términos y expresiones utilizados en el proceso de almacenamiento de tweets. A continuación, se describen cada una de ellas.
 
 
 % Please add the following required packages to your document preamble:
@@ -575,7 +575,7 @@ Tras revisar los criterios de cada uno de los dos etiquetadores se obtuvieron lo
 
 Por último, se volvió a valorar la métrica kappa al término del etiquetado, alcanzando los resultados de la tabla 4.5. La distribución de etiquetas elegida por cada anotador se observa en la figura 4.7.
 
-Es importante señalar que, al tener tres posibles valores de etiqueta y tres anotadores, se podría dar un desacuerdo total entre los tres etiquetadores. Durante el proceso de etiquetado, se produjo este problema para 20 tweets que fue resuelto por un cuarto etiquetador.
+Es importante señalar que, al considerar tres posibles valores de etiqueta y disponer de tres anotadores, se podría dar un desacuerdo total entre los tres etiquetadores. Durante el proceso de etiquetado, se produjo este problema para 20 tweets que fue resuelto por un cuarto etiquetador.
 
 % Please add the following required packages to your document preamble:
 % \usepackage{booktabs}
