--- a/capitulos/EstadoArte.tex
+++ b/capitulos/EstadoArte.tex
@@ -17,7 +17,7 @@
 Una de las áreas más importantes de investigación relacionadas con el NLP es la clasificación de textos o documentos. De un modo general, se conoce como clasificación automática \cite[Capítulo~4]{Jurafsky} a la tarea de asignar una o varias categorías predefinidas sobre una colección de instancias a clasificar. Del mismo modo, la clasificación de textos \cite[Capítulo~4]{Jurafsky} se puede entender como aquella tarea en la que un documento o texto es etiquetado como perteneciente a un determinado conjunto. Este tipo de técnicas se utilizan para un gran número de aplicaciones, tales como:
 \begin{itemize}
 	\itemsep0em 
-	\item Indexación para sistemas de recuperación de información \cite[Chapter~17]{Jurafsky}
+	\item Indexación para sistemas de recuperación de información \cite[Capítulo~17]{Jurafsky}
 	\item Detección de \textit{spam} \cite{Hai2010,Jurafsky}
 	\item Identificación del lenguaje \cite[Capítulo~3]{Jurafsky}
 	\item Análisis de sentimientos \cite[Capítulo~4]{Jurafsky}
@@ -58,7 +58,7 @@ En esta fase, se definen todos los atributos utilizados en el paso posterior por
 \noindent Un modelo de representación muy utilizado se conoce como modelo de representación vectorial \cite{Fresno2006}. Mediante esta representación, los documentos se modelan como vectores dentro de un espacio euclídeo. De este modo, se pueden aplicar operaciones de distancia entre vectores, como indicador de su cercanía según el contenido textual. En la siguiente imagen se muestra un ejemplo en dos dimensiones:
 
 \begin{center}
-	\includegraphics[width=0.4\textwidth]{imagenes/modelo_vectorial.png} %[width=4cm,,keepaspectratio]
+	\includegraphics[width=0.28\textwidth]{imagenes/modelo_vectorial.png} %[width=4cm,,keepaspectratio]
 	\captionof{figure}{Representación vector de documentos}	
 \end{center}
 
