--- a/capitulos/ConclusionesYTrabajoFuturo.tex
+++ b/capitulos/ConclusionesYTrabajoFuturo.tex
@@ -6,13 +6,15 @@
 \fancyhead[RE]{\textsc{CAPÍTULO} \thechapter. Conclusiones y trabajo futuro}
 \label{ch:Conclusiones y trabajo futuro}
 
+\noindent El presente capítulo tiene como misión presentar las principales conclusiones extraídas a lo largo de este trabajo fin de máster. Asimismo, se indican algunas líneas de trabajo futuras a considerar con el fin de mejorar la solución propuesta. 
+
 \section{Conclusiones}
 \label{sec:Conclu}
-\noindent En este trabajo fin de máster se ha presentado un nuevo sistema que permite detectar el machismo en redes sociales. El sistema realiza un análisis supervisado y emplea distintos atributos unificados para, posteriormente, hacer uso de un algoritmo de aprendizaje máquina que permite detectar expresiones y actitudes machistas en las redes sociales. Para cada atributo, se aplican diferentes métodos de preprocesado como la normalización de términos mediante un léxico de \textit{slang} o la sustitución de emoticonos. Tras esto, se unifican los distintos tipos de atributos procesados en un conjunto de datos común que será la entrada de la última fase. En esta etapa, se emplean algoritmos de clasificación supervisada con la intención de obtener un modelo predictivo capaz de detectar las señales textuales que expresan lenguaje machista.
+\noindent En este proyecto se ha presentado un nuevo sistema que permite detectar el machismo en redes sociales. El sistema realiza un análisis supervisado y emplea distintos atributos unificados para, posteriormente, hacer uso de un algoritmo de aprendizaje máquina que permite detectar expresiones y actitudes machistas en las redes sociales. Para cada atributo, se aplican diferentes métodos de preprocesado, como la normalización de términos mediante un léxico de \textit{slang} o la sustitución de emoticonos. Tras esto, se unifican los distintos tipos de atributos procesados en un conjunto de datos común que será la entrada de la última fase. En esta etapa, se emplean algoritmos de clasificación supervisada con la intención de obtener un modelo predictivo capaz de detectar las señales textuales que expresan lenguaje machista.
 
-Se ha presentado MeTwo, un corpus desarrollado en el presente trabajo y que ha sido utilizado para entrenar el sistema de clasificación descrito. El corpus aportado por este trabajo cuenta 3600 mensajes etiquetados por tres anotadores para la tarea de detección del machismo. Hasta la fecha, y en conocimiento del autor de este trabajo, se trata del corpus etiquetado más extenso disponible en castellano para la tarea de detección del machismo.
+Se ha presentado MeTwo, un corpus desarrollado en el presente trabajo y que ha sido utilizado para entrenar el sistema de clasificación descrito. El corpus aportado por este trabajo cuenta con 3.600 tweets etiquetados por tres anotadores para la tarea de detección del machismo. Hasta la fecha, y en conocimiento del autor de este trabajo, se trata del corpus etiquetado más extenso disponible en castellano para la tarea de detección del machismo.
 
-Asimismo, en el capítulo 2, se ha realizado una extensa revisión del estado del arte en la detección del lenguaje ofensivo, tanto sexista como de otro tipo, siendo posible detectar las principales limitaciones y problemas por resolver en la actualidad. La principal conclusión extraída es que se trata de una línea investigación muy actual y de creciente popularidad. Además, se trata de una tarea compleja, en la que aún no se ha investigado suficiente, como demuestran los escasos trabajos que tratan la detección de lenguaje machista en castellano.
+Asimismo, en el capítulo 2, se ha realizado una extensa revisión del estado del arte en la detección del lenguaje ofensivo, tanto sexista como de otro tipo, siendo posible detectar las principales limitaciones y problemas por resolver en la actualidad. La principal conclusión extraída es que se trata de una línea de investigación muy actual y de creciente popularidad. Además, se trata de una tarea compleja en la que aún no se ha investigado suficiente, como demuestran los escasos trabajos que tratan la detección de lenguaje machista en castellano.
 
 Uno de los principales objetivos ha sido la detección de señales textuales que expresan lenguaje machista en castellano. En conocimiento del autor, solo una serie de publicaciones relacionadas con la competición \cite{AMI2018} han abordado la problemática desde un punto de vista práctico sin una investigación para la composición del corpus utilizado en la etapa de entrenamiento. En este trabajo, se ha experimentado con diferentes términos y conceptos para componer un corpus que permita desarrollar un sistema específico para la tarea y los datos recolectados. De este modo, a lo largo del trabajo, se presenta el ciclo completo para la recolección de datos, preprocesamiento y construcción del sistema de clasificación para el lenguaje natural.
 
@@ -23,17 +25,17 @@ Otro inconveniente del sistema desarrollado es la excesiva dependencia de la pre
 \section{Trabajo futuro}
 \label{sec:Trab_Fut}
 
-\noindent El proyecto realizado hasta el momento, presentado como trabajo fin de máster, será el punto de partida para la tesis doctoral que se pretende desarrollar en los próximos años. Aunque los resultados obtenidos son prometedores, se han definido posibles mejoras así como líneas de investigación futuras.
+\noindent El proyecto realizado hasta el momento, presentado como trabajo fin de máster, será el punto de partida de la tesis doctoral que se pretende desarrollar en los próximos años. Aunque los resultados obtenidos son prometedores, se han definido posibles mejoras, así como líneas de investigación futuras.
 
-En primer lugar, el método propuesto no realiza ninguna diferencia en el tipo de machismo empleado en el texto. Una posible línea de trabajo sería profundizar en los tipos de machismo existentes y realizar una ampliación del etiquetado en el corpus MeTwo. En la guía de anotación (ver Apéndice A) se realiza una primera exploración para presentar distintos tipos de machismo, como, por ejemplo, la sexualización, el descrédito o la dominancia.
+En primer lugar, el método propuesto no realiza ninguna diferencia en el tipo de machismo empleado en el texto. Una posible línea de trabajo sería profundizar en los tipos de machismo existentes y realizar una ampliación del etiquetado en el corpus MeTwo. En la guía de anotación (ver Apéndice A) se realiza una primera exploración para presentar distintos tipos de machismo, como, por ejemplo, la sexualización, el humorístico, el descrédito o la dominancia.
 
-Por otra parte, tal y como se ha podido comprobar de un modo experimental, sería interesante la ampliación a distintos fuentes de datos como periódicos, webs u otras redes sociales. En algunos experimentos, como en el apartado 6.4, se ha concluido que la bondad de los resultados podría ser mayor si se dispusiera de una mayor cantidad de información.
+Por otra parte, tal y como se ha podido comprobar de un modo experimental, sería interesante la ampliación a distintas fuentes de datos como periódicos, webs u otras redes sociales. En algunos experimentos, como en el apartado 6.4, se ha concluido que la bondad de los resultados podría ser mayor si se dispusiera de una mayor cantidad de información.
 
-Asimismo, sería recomendable profundizar en las técnicas para la clasificación automática, por ejemplo, técnicas basadas en redes neuronales que alcanzan unos resultados prometedores en tareas relacionadas con el procesamiento de texto como BERT \cite{Jacob2019}. Este tipo de técnicas, junto con representaciones textuales basadas en \textit{word embedding}, podrían ayudar a paliar algunas de las limitaciones detectadas en el sistema propuesto como, por ejemplo, la consideración del contexto en el que se utilizan los términos machistas.
+Asimismo, sería recomendable profundizar en las técnicas para la clasificación automática, como, por ejemplo, técnicas basadas en redes neuronales que alcanzan unos resultados prometedores en tareas relacionadas con el procesamiento de texto como BERT \cite{Jacob2019}. Este tipo de técnicas, junto con representaciones textuales basadas en \textit{word embedding}, podrían ayudar a paliar algunas de las limitaciones detectadas en el sistema propuesto, como, por ejemplo, la consideración del contexto en el que se utilizan los términos machistas.
 
 Otra línea de trabajo futura podría ser la adaptación del sistema para el idioma inglés. Debido al diseño de este método, se podría adaptar fácilmente para ser capaz de detectar expresiones machistas en otros idiomas.
 
-Además, sería recomendable la creación de un léxico machista específico para el español que permita añadir atributos en el entrenamiento del sistema para detectar aquellos términos que más se repitan en los mensajes machistas. Este tipo de enfoque ha demostrado su efectividad en trabajos similares \cite{Wahyu2018} y se podrían implementar mediante léxicos disponibles en la bibliografía \cite{Mauro2016}.
+Además, sería recomendable la creación de un léxico machista específico para el español el cual permita añadir atributos en el entrenamiento del sistema con el fin de detectar aquellos términos que más se repitan en los mensajes machistas. Este tipo de enfoque ha demostrado su efectividad en trabajos similares \cite{Wahyu2018} y se podrían implementar mediante léxicos disponibles en la bibliografía \cite{Mauro2016}.
 
-Finalmente, como salida del sistema, sería interesante la creación de un portal web que permita, mediante distintos tipos de visualizaciones, explorar los tipos de machismos en España, Europa o todo el mundo. Podría servir para detectar y prevenir los tipos de machismos en cada zona geográfica, indicar los términos machistas más empleados y los medios más afines para propagar este tipo de mensajes.
+Finalmente, como salida del sistema, sería interesante la creación de un portal web que permita, mediante distintas visualizaciones, explorar los tipos de machismo en España, en Europa y/o en todo el mundo. Podría servir para detectar y prevenir los tipos de machismo en cada zona geográfica, indicar los términos machistas más empleados y los medios más afines para propagar este tipo de mensajes.
 
